add unittests and fix warning